<resources>
    <string name="app_name">QuizKotlin</string>
    <string name="quiz_splash">Quiz!</string>
    <string name="text_accounts">All Accounts</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_student_home">StudentHomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Sign in</string>
    <string name="to_continue">to continue</string>
    <string name="create_account">Create Account</string>
    <string name="i_m_a">I am a</string>
    <string name="teacher">Teacher</string>
    <string name="student">Student</string>
    <string name="next">Next</string>
    <string name="or">or\u0020</string>
    <string name="or1">or</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="view_roles_and_access_of_user">View Roles and Access of User</string>
    <string name="teacher_roles">This user has the right to create classes,upload the assignments, tests and can
    also share the link to join video lectures. He can also review the assignment and
    tests and give the marks on the platform itself. This user will be kind of an administrator.</string>
    <string name="student_roles">This user will have the right to perform the assignments, attend the tests and
    join the lectures. He will also be able to see the timetable and test results as mentioned above.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="back">Back</string>
    <string name="prev">Prev</string>
    <string name="sign_up_with_google">Sign up with Google</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="no_account">No account?\u0020</string>
    <string name="create_one">Create One!</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="bad_login_credential">Invalid Login Credential..</string>
<!--    <string name="default_web_client_id">hi</string>-->
    <string name="question_bank">Question Bank</string>
    <string name="quiz_bank">Quiz Bank</string>
    <string name="add_question">Add question</string>

    <string name="quiz_name">Quiz Name</string>
    <string name="quiz_marks">Marks</string>
    <string name="add_quiz">Add quiz</string>
    <string name="storing_user_info">Storing user info…</string>
    <string name="_8_maths">8_Maths</string>
    <string name="my_school">My School</string>
    <string name="you_have_not_enrolled_in_any_subjects">You have not enrolled in any subjects!</string>
    <string name="signing_in">Signing in…</string>
    <string name="login__info_msg">On Clicking -> Sign in with Google, You will be enrolled as a student. To enroll as
    enter as a teacher, please go to sign up screen via -> Create One</string>
    <string name="question_bank_view">Question Bank</string>
    <string name="quiz_marks_view">Quiz Marks</string>
    <string name="question">Question</string>
    <string name="option">Option</string>
    <string name="your_answer">Your answer</string>
    <string name="question_description">Question description</string>
    <string name="assignment">Assignment</string>
    <string name="quiz_test">Quiz / Test</string>
    <string name="calendar">Calendar</string>
    <string name="logout">Logout</string>
    <string name="enrolled_subjects">Enrolled Subjects</string>
    <string name="r">R</string>
    <string name="huzefabot_gmail_com">huzefabot@gmail.com</string>
    <string name="to_do">To Do</string>
    <string name="missing">Missing</string>
    <string name="done">Done</string>
    <string name="maths_assignment_1">Maths Assignment 1</string>
    <string name="subject">Subject :</string>
    <string name="task_link">Task Link :</string>
    <string name="no_assignment_found">No Assignment found !</string>
    <string name="upcoming">Upcoming</string>
    <string name="past">Past</string>
    <string name="no_test_found">No Test Found !</string>
    <string name="quiz_card">Quiz1</string>
    <string name="quiz_card_marks">You scored: 0/10</string>
    <string name="due_31_08_2021_11_59">Due: 31/08/2021 11:59</string>
    <string name="_78_100">78/100</string>
    <string name="deleteButton">Delete</string>
    <string name="send_student_DB">Send Quiz to student database</string>
    <string name="viewButton">View</string>
    <string name="addButton">Add</string>
    <string name="no_results_found">No results found</string>
    <string name="question_bank_is_empty">No questions found</string>
    <string name="options_not_found">Options not found</string>
    <string name="enter_quiz_title">Enter title(Optional)</string>
    <string name="select_question_bank">Select question bank</string>
    <string name="create_subject">Create Subject</string>
    <string name="subject_class">Subject/Class</string>
    <string name="your_name">Your Name</string>
    <string name="class_link">Class Link (if any)</string>
    <string name="timing_if_any">Timing (if any)</string>
    <string name="create">Create</string>
    <string name="no_announcement_from_your_teacher">No announcement from your teacher !!</string>
    <string name="warning">Warning</string>
    <string name="you_will_no_longer_have_access_to_this_subject">You will no longer have access to this subject</string>
    <string name="un_enroll">Un Enroll</string>
    <string name="cancel">Cancel</string>
    <string name="splash_bottom_tag">Learn Adapt Overcome Repeat</string>
    <string name="results_score">You scored: </string>
    <string name="results_title">Summary</string>
    <string name="create_calendar_event_for_student">Create Calendar Event for Student.</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="location">Location</string>
    <string name="meeting_link_if_online">Meeting Link (if online)</string>
    <string name="create_event">Create Event</string>
    <string name="calendar_note"><![CDATA[Note: Write -> Remote / Online <- in location field, if it is online.]]></string>
    <string name="calendar_warning">All fields are mandatory!!</string>
    <string name="enter_question_hint">Enter Question</string>
    <string name="show_question">Show Question</string>
    <string name="enter_num_of_options">Enter number of options</string>
    <string name="enter_option1">Enter option A</string>
    <string name="enter_option2">Enter option B</string>
    <string name="enter_option3">Enter option C</string>
    <string name="enter_option4">Enter option D</string>
    <string name="enter_correct_answer">Enter correct option</string>
    <string name="correct_answer">Correct answer</string>
    <string name="save_button">Save</string>
    <string name="next_button">Next</string>
    <string name="answerDisclaimer">User did not answer this question</string>
    <string name="teacherDisclaimer">Space for disclaimer</string>
    <string name="delete_button">Delete</string>
    <string name="Quiz">Quiz</string>
    <string name="attempt_quiz">Attempt Quiz</string>
    <string name="quiz_list">View Quiz</string>
    <string name="question_is">Question</string>
    <string name="options_disclaimer">If no options are entered, default option - 4 is used.</string>
    <string name="choose_quiz">Please tap on the spinner to select a quiz.</string>
    <string name="option1">Option A</string>
    <string name="option2">Option B</string>
    <string name="option3">Option C</string>
    <string name="option4">Option D</string>
    <string name="start">Start</string>
    <string name="qnum">10</string>


</resources>