<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/userType_rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding_xlarge"
        tools:context=".fragments.UserTypeFragment">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="@dimen/margin_25"
            android:src="@drawable/quiz_app_logo"
            app:civ_border_color="#FF000000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/create_account"
            android:textColor="@color/black"
            android:textSize="@dimen/text_20"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or" />

            <TextView
                android:id="@+id/userType_login_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/poppins"
                android:text="@string/login_to_your_account"
                android:textColor="@color/color_primary_variant" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_15"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/i_m_a"
            android:textSize="@dimen/text_22" />

        <RadioGroup
            android:id="@+id/userType_radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/userType_teacher_rb"
                style="@style/Widget.App.RadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:text="@string/teacher"
                android:textSize="@dimen/text_18" />

            <RadioButton
                android:id="@+id/userType_student_rb"
                style="@style/Widget.App.RadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:text="@string/student"
                android:textSize="@dimen/text_18" />

        </RadioGroup>

        <Button
            android:id="@+id/userType_next_btn"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/margin_15"
            android:backgroundTint="@color/blue"
            android:text="@string/next" />

        <TextView
            android:id="@+id/userType_role_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_20"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/poppins"
            android:text="@string/view_roles_and_access_of_user"
            android:textColor="@color/black" />

    </LinearLayout>

</ScrollView>