<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context=".ShowQuestions">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_bar_height_normal"
        android:background="@drawable/top_bar_bg"
        android:padding="@dimen/padding_normal">

        <ImageView
            android:id="@+id/goBackButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/margin_10"
            android:src="@drawable/ic_close"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="123dp"
            android:layout_toEndOf="@+id/goBackButton"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/Quiz"
            android:textColor="@color/white"
            android:textSize="@dimen/text_26" />

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/avlSubject_progress"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_10"
        android:visibility="gone" />

    <TextView
        android:id="@+id/avlSubject_msg_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_15"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center"
        android:text="@string/question_bank_is_empty"
        android:textSize="@dimen/text_22"
        android:visibility="gone" />


    <EditText
        android:id="@+id/show_question"
        android:layout_width="365dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_15"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins_bold"
        android:hint="@string/enter_question_hint"
        android:textColor="@color/black"
        android:textColorHint="@color/browser_actions_title_color"

        android:textSize="@dimen/text_26" />

    <EditText
        android:id="@+id/show_option1"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_15"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins_semibold"
        android:hint="@string/enter_option1"
        android:textColor="@color/black"
        android:textColorHint="#78909C"
        android:textSize="@dimen/text_18" />

    <EditText
        android:id="@+id/show_option2"

        android:layout_width="150dp"
            android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_15"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins_semibold"
        android:hint="@string/enter_option2"
        android:textColor="@color/black"
        android:textColorHint="#78909C"
        android:textSize="@dimen/text_18" />

    <EditText
        android:id="@+id/show_option3"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_15"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins_semibold"
        android:hint="@string/enter_option3"
        android:textColor="@color/black"
        android:textColorHint="#78909C"
        android:textSize="@dimen/text_18" />

    <EditText
        android:id="@+id/show_option4"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_15"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins_semibold"
        android:hint="@string/enter_option4"
        android:textColor="@color/black"
        android:textColorHint="#78909C"
        android:textSize="@dimen/text_18" />

    <EditText
        android:id="@+id/show_correct_answer"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_15"
        android:layout_marginTop="0dp"
        android:fontFamily="@font/poppins_semibold"
        android:hint="@string/correct_answer"
        android:textColor="@color/black"
        android:textColorHint="#78909C"
        android:textSize="@dimen/text_18" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_10"
        android:orientation="horizontal">


    <com.google.android.material.button.MaterialButton
        android:id="@+id/delete_button_demo"
        style="?attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:paddingHorizontal="50dp"
        android:layout_weight=".50"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="@dimen/margin_10"
        android:text="@string/delete_button"
        android:textAllCaps="false"
        android:textSize="@dimen/text_24" />

        <View android:id="@+id/strut"
            android:layout_width="30dp"
            android:layout_height="0dp"
            />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/next_button_demo"
        style="?attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="50dp"
        android:layout_gravity="end"
        android:layout_marginEnd="@dimen/margin_10"
        android:layout_weight=".50"
        android:layout_marginTop="10dp"
        android:text="@string/next_button"
        android:textAllCaps="false"
        android:textSize="@dimen/text_24" />
    </LinearLayout>

</LinearLayout>